--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,49 @@
   align-items: center;
 }
 
-/* buttons */
+/***********************************************************************************
+ *	+ WAVES EFFECT
+ ***********************************************************************************/
+
+.waves {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: inline-block;
+  -webkit-user-select: none;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+}
+
+.waves .waves-ripple {
+  position: absolute;
+  z-index: -1;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-top: -10px;
+  margin-left: -10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.7s ease-out;
+  transition: all 0.7s ease-out;
+}
+
+.waves.waves-dark .waves-ripple {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+/***********************************************************************************
+ *	+ old buttons
+ ***********************************************************************************/
+
 .btn-cus {
   padding: 10px 20px;
   border-radius: 40px;
