DEV-341 decode scss rész partialsokra robbantás

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import "./tabs";
-@import "./waves";
+@import "decode/components/tabs";
+@import "decode/base/waves";
 
 .flex-center {
   display: flex;
