--- a/scss/decode/layout/_header-top.scss
+++ b/scss/decode/layout/_header-top.scss
@@ -58,7 +58,7 @@
 }
 
 #header-top .widget-search input[type="submit"] {
-  background-image: url(../images/search-2.png);
+  background-image: url('/decode/search-2.png');
 }
 
 #header-top .widget-recent-posts ul li .post-title,
