--- a/scss/decode/layout/_header-menu.scss
+++ b/scss/decode/layout/_header-menu.scss
@@ -165,19 +165,19 @@
   color: #fff;
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
-
-  .menu {
-    display: none;
-  }
-
-}
-
-@media (max-width: 767px) {
-
-  .menu {
-    display: none;
-  }
-
-}
+//@media (min-width: 768px) and (max-width: 1199px) {
+//
+//  .menu {
+//    display: none;
+//  }
+//
+//}
+//
+//@media (max-width: 767px) {
+//
+//  .menu {
+//    display: none;
+//  }
+//
+//}
 
