--- a/scss/decode/layout/_header-sticky.scss
+++ b/scss/decode/layout/_header-sticky.scss
@@ -8,7 +8,7 @@
   top: 0;
   right: 0;
   left: 0;
-  display: none;
+  //display: none;
   width: 100%;
   margin: 0 auto;
   background-color: #fff;
